<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ups.est.frank.appeventos.actividades.RegistroActivity">

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNombre"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCodigo" />

    <TextView
        android:id="@+id/lblApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblApellido"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/lblNombre"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/lblCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCorreo"
        android:layout_marginLeft="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/lblApellido"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/lblClave"
        android:layout_width="39dp"
        android:layout_height="22dp"
        android:text="@string/lblClave"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCorreo"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintLeft_toRightOf="@+id/lblNombre"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/spnCodigo" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtApellido"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintLeft_toRightOf="@+id/lblApellido"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtCorreo"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintLeft_toRightOf="@+id/lblCorreo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/txtClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtClave"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintLeft_toRightOf="@+id/lblClave"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <Spinner
        android:id="@+id/spnCodigo"
        android:layout_width="209dp"
        android:layout_height="43dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lblCodigo"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.764" />

    <TextView
        android:id="@+id/lblCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCodigo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnEliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toRightOf="@+id/btnRegistrar"
        app:layout_constraintRight_toLeftOf="@+id/btnCancelar"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
        app:layout_constraintVertical_bias="0.873" />

    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTelefono"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/lblClave" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtTelefono"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/lblTelefono"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtClave" />

</android.support.constraint.ConstraintLayout>
